--- a/company/templates/company/company_detail.html
+++ b/company/templates/company/company_detail.html
@@ -40,7 +40,7 @@
       <div class="panel-content pb-3">
         {% for item in company.manufactured_items.all %}
           <span class="ps-2 pe-4">
-            <i class="bi bi-box2-fill item-text-color"></i> <a href="{% url 'item_detail' item.pk %}" title="View item">{{ item.name }}</a>
+            <i class="bi bi-box2-fill item-text-color"></i> <a href="{{ item.get_absolute_url }}" title="View item">{{ item.name }}</a>
           </span>
         {% endfor %}
       </div>
@@ -56,7 +56,7 @@
       <div class="panel-content pb-3">
         {% for item in company.supplied_items.all %}
           <span class="ps-2 pe-4">
-            <i class="bi bi-box2-fill text-success"></i> <a href="{% url 'item_detail' item.pk %}" title="View item">{{ item.name }}</a>
+            <i class="bi bi-box2-fill text-success"></i> <a href="{{ item.get_absolute_url }}" title="View item">{{ item.name }}</a>
           </span>
         {% endfor %}
       </div>
