--- a/item/templates/validation/validation_list_stock.html
+++ b/item/templates/validation/validation_list_stock.html
@@ -22,7 +22,7 @@
       <div class="row g-2 mb-2 border-top align-items-center">
         <!-- Stock Item -->
         <div class="col-8 col-lg-5">
-          <a href="{% url 'stock_detail' stock.pk %}">{{ stock }}</a>
+          <a href="{{ stock.get_absolute_url }}">{{ stock }}</a>
         </div>
         <!-- Delivery Date -->
         <div class="col-4 col-lg-2">{{ stock.delivery_date|date:"d/m/Y"|default_if_none:"" }}</div>
