--- a/location/templates/location/location_list.html
+++ b/location/templates/location/location_list.html
@@ -24,7 +24,7 @@
       <div class="row g-2 mb-2 border-top align-items-center">
         <!-- Location Name -->
         <div class="col-6 col-lg-3">
-          <a href="{% url 'location_detail' location.pk %}">{{ location.name }}</a>
+          <a href="{{ location.get_absolute_url }}">{{ location.name }}</a>
         </div>
         <!-- Room -->
         <div class="col-6 col-lg-2">{{ location.room.name|default_if_none:"" }}</div>
@@ -34,7 +34,7 @@
         <div class="col-lg-3 d-none d-lg-block small">
           {% if location.stock_items|length %}
             {% for stock in location.stock_items|slice:10 %}
-              <a href="{% url 'stock_detail' stock.pk %}">{{ stock }}</a>
+              <a href="{{ stock.get_absolute_url }}">{{ stock }}</a>
               {% if not forloop.last %},{% endif %}
             {% endfor %}
           {% endif %}
