--- a/item/templates/inhouse/inhouse_detail.html
+++ b/item/templates/inhouse/inhouse_detail.html
@@ -1,4 +1,5 @@
 {% extends "object_detail_base.html" %}
+{% load stock_tags %}
 {% load ui_tags %}
 {% block panel_title %}
   <i class="bi bi-box-fill inhouse-text-color"></i> {{ object.name }}
@@ -39,7 +40,9 @@
                title="{{ object.category }}">{{ object.category }}</a>
           </div>
           <div class="col-6 col-sm-3 text-muted">Expiry date:</div>
-          <div class="col-6 col-sm-3">{{ object.expiry_date|date:"d/m/Y" }}</div>
+          <div class="col-6 col-sm-3">
+            <span class="{{ object.expiry_date|expiry_color }}">{{ object.expiry_date|date:"d/m/Y" }}</span>
+          </div>
         </div>
         <div class="row mb-1">
           <div class="col-12 col-sm-3 text-muted">Description:</div>
