--- a/item/templates/item/item_detail.html
+++ b/item/templates/item/item_detail.html
@@ -1,5 +1,6 @@
 {% extends "object_detail_base.html" %}
 {% load static %}
+{% load stock_tags %}
 {% block title %}
   Item Detail
 {% endblock title %}
@@ -156,7 +157,9 @@
                 <td class="ps-2">
                   <a href="{{ stock.get_absolute_url }}">{{ stock.lot_number }}</a>
                 </td>
-                <td class="ps-2">{{ stock.expiry_date|date:'d/m/Y' }}</td>
+                <td class="ps-2">
+                  <span class="{{ stock.expiry_date|expiry_color }}">{{ stock.expiry_date|date:'d/m/Y' }}</span>
+                </td>
                 <td class="ps-2">{{ stock.entries.count }}</td>
               </tr>
             {% endif %}
