--- a/templates/homepage/watchlist.html
+++ b/templates/homepage/watchlist.html
@@ -4,10 +4,7 @@
       <i class="bi bi-cart-plus-fill pe-2 delivery-text-color"></i>  <b>Please Order</b>
     </div>
   </div>
-  <div class="panel-content">
-    <p>{{ items.0 }}</p>
-    <p>{{ items.1 }}</p>
-    <p>{{ items.2 }}</p>
-    <p>{{ items.3 }}</p>
+  <div class="panel-content" hx-get="{% url 'watchlist' %}" hx-target="this" hx-trigger="load" hx-swap="innerHTML">
+   
   </div>
 </div>
