--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-6">{% include "homepage/notifications.html" %}</div>
-      <div class="col-lg-6">{% include "homepage/ordering.html" %}</div>
+      <div class="col-lg-6">{% include "homepage/watchlist.html" %}</div>
       <div class="col-lg-6">{% include "homepage/statistics.html" %}</div>
       <div class="col-lg-6">{% include "homepage/deliveries.html" %}</div>
     </div>
