--- a/templates/homepage/stocks.html
+++ b/templates/homepage/stocks.html
@@ -1,7 +1,7 @@
 <div class="panel panel-frontpage">
   <div class="panel-heading">
     <div class="d-flex justify-content-between pe-2">
-      <span><i class="bi bi-boxes stock-text-color"></i> <b>Latest Deliveries</b></span>
+      <span><i class="bi bi-boxes stock-text-color"></i> <b>Latest Stocks</b></span>
       <span class="float-end">
         <a href="{% url 'stock_list' %}"
            title="List of all stocks"
