--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,10 @@
 {% block content %}
   <div class="container-fluid">
     <div class="row">
-      <div class="col-lg-6">{% include "homepage/notifications.html" %}</div>
-      <div class="col-lg-6">{% include "homepage/watchlist.html" %}</div>
-      <div class="col-lg-6">{% include "homepage/statistics.html" %}</div>
-      <div class="col-lg-6">{% include "homepage/deliveries.html" %}</div>
+      <div class="col-lg-6 mb-2">{% include "homepage/notifications.html" %}</div>
+      <div class="col-lg-6 mb-2">{% include "homepage/watchlist.html" %}</div>
+      <div class="col-lg-6 mb-2">{% include "homepage/statistics.html" %}</div>
+      <div class="col-lg-6 mb-2">{% include "homepage/stocks.html" %}</div>
     </div>
   </div>
 {% endblock content %}
