--- a/item/templates/stock/stock_detail.html
+++ b/item/templates/stock/stock_detail.html
@@ -7,6 +7,9 @@
 {% block panel_title %}
   <i class="bi bi-box-seam-fill stock-text-color"></i> {{ stock.source.name }}
 {% endblock panel_title %}
+{% block panel_actions %}
+  <div class="pe-3">{% include "stock/partials/watchlist_icons.html" %}</div>
+{% endblock panel_actions %}
 {% block panel_content %}
   <div class="p-3">
     <div class="panel mb-4">
