--- a/item/templates/usage/usage_htmx_updated.html
+++ b/item/templates/usage/usage_htmx_updated.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-center align-items-center"
+<div class="d-flex justify-content-sm-center align-items-center"
      style="position: relative"
      hx-target="this">
   <a hx-get="{% url 'usage_htmx_update' entry.pk %}"
