--- a/templates/homepage/notifications.html
+++ b/templates/homepage/notifications.html
@@ -6,10 +6,10 @@
   </div>
   <div class="panel-content">
     <ul>
-      <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
-      <li>Repellat et similique aliquid unde perspiciatis eligendi autem.</li>
-      <li>Voluptatem quo laboriosam sed esse, eos consequuntur adipisci soluta hic iure fugit, harum nulla.</li>
-      <li>Similique aliquid unde perspiciatis eligendi autem voluptatem quo laboriosam sed esse.</li>
+      <li>Lorem ipsum dolor sit amet consectetur, adipisicing.</li>
+      <li>Repellat et similique aliquid unde perspiciatis.</li>
+      <li>Voluptatem quo laboriosam sed esse, eos conse.</li>
+      <li>Similique aliquid unde perspiciatis eligendi autem.</li>
     </ul>
   </div>
 </div>
