--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,22 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-6 mb-2">{% include "homepage/notifications.html" %}</div>
-      <div class="col-lg-6 mb-2">{% include "homepage/watchlist.html" %}</div>
-      <div class="col-lg-6 mb-2">{% include "homepage/statistics.html" %}</div>
+      <div class="col-lg-6 mb-2">{% include "homepage/restock_notice.html" %}</div>
       <div class="col-lg-6 mb-2">{% include "homepage/stocks.html" %}</div>
+      <div class="col-lg-6 mb-2">{% include "homepage/statistics.html" %}</div>
     </div>
   </div>
 {% endblock content %}
+{% block modals %}
+  <div class="modal fade"
+       id="crudModal"
+       tabindex="-1"
+       aria-labelledby="crudModalLabel"
+       aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <!-- HTMX rendered content -->
+      </div>
+    </div>
+  </div>
+{% endblock modals %}
