--- a/templates/homepage/restock_notice.html
+++ b/templates/homepage/restock_notice.html
@@ -4,5 +4,7 @@
       <i class="bi bi-cart-plus-fill pe-2 delivery-text-color"></i>  <b>Please restock</b>
     </div>
   </div>
-  <div class="panel-content small">{% include "watchlist/watchlist_list.html" %}</div>
+  {% if watchlists %}
+    <div class="panel-content small">{% include "watchlist/watchlist_list.html" %}</div>
+  {% endif %}
 </div>
