--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,10 @@
 {% block content %}
   <div class="container-fluid">
     <div class="row">
-      <div class="col-lg-6 mb-2">{% include "homepage/notifications.html" %}</div>
+      {% comment %} <div class="col-lg-6 mb-2">{% include "homepage/notifications.html" %}</div> {% endcomment %}
       <div class="col-lg-6 mb-2">{% include "homepage/restock_notice.html" %}</div>
       <div class="col-lg-6 mb-2">{% include "homepage/stocks.html" %}</div>
-      <div class="col-lg-6 mb-2">{% include "homepage/statistics.html" %}</div>
+      {% comment %} <div class="col-lg-6 mb-2">{% include "homepage/statistics.html" %}</div> {% endcomment %}
     </div>
   </div>
 {% endblock content %}
