--- a/category/templates/category/category_list.html
+++ b/category/templates/category/category_list.html
@@ -14,9 +14,9 @@
     <!-- Headers -->
     <div class="row g-2 mb-2 d-none d-lg-flex text-muted fw-bold align-items-center">
       <div class="col-3">Categories</div>
-      <div class="col-4">Description</div>
+      <div class="col-3">Description</div>
       <div class="col-4">Items</div>
-      <div class="col-1">{% toggle_icon 'tooltray-trigger' 'tooltray-container' %}</div>
+      <div class="col-2 text-center">{% toggle_icon 'tooltray-trigger' 'tooltray-container' %}</div>
     </div>
     <!-- Rows -->
     {% for category in categories %}
@@ -26,18 +26,17 @@
           <a href="{{ category.get_absolute_url }}" title="category details">{{ category.name }}</a>
         </div>
         <!-- Description -->
-        <div class="col-lg-4 d-none d-lg-block small">{{ category.description|truncatechars:120 }}</div>
+        <div class="col-lg-3 d-none d-lg-block small">{{ category.description|truncatechars:120 }}</div>
         <!-- Items -->
-        <div class="col-lg-4 d-none d-lg-block">
+        <div class="col-lg-4 d-none d-lg-block small">
           {% for item in category.get_all_items|slice:20 %}
             <a href="{{ item.get_absolute_url }}"
-               title="{{ item.get_verbose_name }} detail: {{ item.name }}">{{ item.name }}</a>
-            {% if not forloop.last %},{% endif %}
+               title="{{ item.get_verbose_name }} detail: {{ item.name }}">{{ item.name }}</a>{% if not forloop.last %},{% endif %}
           {% endfor %}
           {% if category.get_all_items.count > 20 %}...{% endif %}
         </div>
         <!-- Actions -->
-        <div class="col-lg-1 d-none d-lg-block align-middle">
+        <div class="col-lg-2 d-none d-lg-block text-center">
           <span class="tooltray-container d-none">
             <a href="{% url 'category_update' category.pk %}"><i class="bi bi-pencil-square"></i></a>
             <a hx-get="{% url 'category_delete' category.pk %}"
