--- a/templates/partials/navbar_menu_start.html
+++ b/templates/partials/navbar_menu_start.html
@@ -26,7 +26,7 @@
        role="button"
        data-bs-toggle="dropdown"
        aria-expanded="false"
-       href="javascript:"><i class="bi bi-eyedropper inhouse-text-color"></i> Reagents</a>
+       href="javascript:"><i class="bi bi-box inhouse-text-color"></i> Reagents</a>
     <ul class="dropdown-menu" aria-labelledby="userDropdown">
       <li class="dropdown-header">
         <span class="item-text-color">Commercial Reagents</span>
