minor UI update

--- a/item/templates/item/item_list.html
+++ b/item/templates/item/item_list.html
@@ -24,17 +24,17 @@
     <!-- Items -->
     {% for item in items %}
       <div class="row g-2 mb-2 border-top align-items-center">
-        <div class="col col-lg-3">
+        <div class="col-8 col-lg-3">
           <a href="{{ item.get_absolute_url }}" title="item details">{{ item.name }}</a>
         </div>
-        <div class="col col-lg-1 small">{{ item.product_id }}</div>
+        <div class="col-4 col-lg-1 small">{{ item.product_id }}</div>
         <div class="d-none col-lg-1 d-lg-block">
           <a href="{{ item.category.get_absolute_url }}" title="item details">{{ item.category }}</a>
         </div>
         <div class="d-none col-lg-2 d-lg-block">
           {% if item.manufacturer %}<a href="{{ item.manufacturer.get_absolute_url }}">{{ item.manufacturer }}</a>{% endif %}
         </div>
-        <div class="col col-lg-2">
+        <div class="d-none col-lg-2 d-lg-block">
           {% if item.supplier %}<a href="{{ item.supplier.get_absolute_url }}">{{ item.supplier }}</a>{% endif %}
         </div>
         <div class="d-none col-lg-2 d-lg-block small">{{ item.description|truncatechars:150 }}</div>
