--- a/user/templates/user/auth_base.html
+++ b/user/templates/user/auth_base.html
@@ -28,7 +28,7 @@
     <style>main#main-content {padding-top: 75px;} /* top padding under the fixed navbar */</style>
     {% block css %}
       <style>
-      body { background-image: url('{% static "images/lab_background.jpg" %}'); background-size: cover; background-repeat: no-repeat; }
+      body { background-image: url('{% static "images/lab_background.jpg" %}'); background-size: cover;}
       </style>
     {% endblock css %}
   </head>
