--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -21,7 +21,7 @@
 {% block auth_footer %}
   <div class="text-center mt-3">
     <p>
-      Don't have an account? <a href="{% url 'register' %}">Register</a>
+      Don't have an account? Register <a href="{% url 'register' %}">here</a>.
     </p>
   </div>
 {% endblock auth_footer %}
