--- a/item/templates/stock/stock_detail.html
+++ b/item/templates/stock/stock_detail.html
@@ -233,13 +233,13 @@
         </div>
         {% for entry in stock.entries.all %}
           <div class="row g-2 align-items-center">
-            <div class="col-2 col-lg-2 ps-3">
+            <div class="col-6 col-lg-2 ps-3">
               <span class="icon-with-text">
                 <i class="bi bi-box2-fill icon-with-text-icon {% if entry.remaining_quantity == 0 %}text-gray-300{% else %}{% stock_entry_colour entry.ordinal_number %}-text-color{% endif %}"></i>
                 <span class="icon-with-text-low">{{ entry.ordinal_number }}</span>
               </span>
             </div>
-            <div class="col-4 col-lg-2">{{ entry.in_use_date|date:"d/m/Y"|default_if_none:"" }}</div>
+            <div class="d-none d-lg-block col-lg-2">{{ entry.in_use_date|date:"d/m/Y"|default_if_none:"" }}</div>
             <div class="col-6 col-lg-3">
               {% if entry.remaining_quantity == 0 %}
                 <del>0 {{ entry.remaining_unit }}</del>
