--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -28,7 +28,7 @@
 {% block auth_footer %}
   <div class="text-center mt-3">
     <p>
-      Already have an account? <a href="{% url 'login' %}">Login</a>
+      Already have an account? Login <a href="{% url 'login' %}">here</a>.
     </p>
   </div>
 {% endblock auth_footer %}
