--- a/location/templates/location/location_list.html
+++ b/location/templates/location/location_list.html
@@ -1,23 +1,41 @@
-{% extends "object_list_base.html" %}
+{% extends 'object_list_base.html' %}
 {% load ui_tags %}
 {% block title %}
   Locations
-{% endblock title %}
+{% endblock %}
 {% block panel_title %}
   <i class="bi bi-geo-alt-fill location-text-color"></i> Storage Locations
-{% endblock panel_title %}
+{% endblock %}
 {% block panel_actions %}
   <a href="{% url 'location_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New location</a>
-{% endblock panel_actions %}
+{% endblock %}
 {% block panel_content %}
   <div class="container-fluid pt-3">
     <!-- Headers -->
     <div class="row g-2 mb-2 d-none d-lg-flex text-muted fw-bold align-items-center">
-      <div class="col-3">Name</div>
-      <div class="col-2">Room</div>
+      <div class="col-3">
+        {% with current_sort=request.GET.sort_by|default:'name' current_order=request.GET.order|default:'asc' %}
+          {% if current_sort == 'name' and current_order == 'asc' %}
+            <a href="?sort_by=name&order=desc">Name <i class="bi bi-arrow-up"></i></a>
+          {% else %}
+            <a href="?sort_by=name&order=asc">Name <i class="bi bi-arrow-down"></i></a>
+          {% endif %}
+        {% endwith %}
+      </div>
+      <div class="col-2">
+        {% with current_sort=request.GET.sort_by|default:'name' current_order=request.GET.order|default:'asc' %}
+          {% if current_sort == 'room' and current_order == 'asc' %}
+            <a href="?sort_by=room&order=desc">Room <i class="bi bi-arrow-up"></i></a>
+          {% else %}
+            <a href="?sort_by=room&order=asc">Room <i class="bi bi-arrow-down"></i></a>
+          {% endif %}
+        {% endwith %}
+      </div>
       <div class="col-3">Description</div>
       <div class="col-3">Stock Items</div>
-      <div class="col-1">{% toggle_icon 'tooltray-trigger' 'tooltray-container' %}</div>
+      <div class="col-1">
+        {% toggle_icon 'tooltray-trigger' 'tooltray-container' %}
+      </div>
     </div>
     <!-- Rows for Each Location -->
     {% for location in locations %}
@@ -27,7 +45,7 @@
           <a href="{{ location.get_absolute_url }}">{{ location.name }}</a>
         </div>
         <!-- Room -->
-        <div class="col-6 col-lg-2">{{ location.room.name|default_if_none:"" }}</div>
+        <div class="col-6 col-lg-2">{{ location.room.name|default_if_none:'' }}</div>
         <!-- Description -->
         <div class="col-lg-3 d-none d-lg-block small">{{ location.description|truncatechars:150 }}</div>
         <!-- Stock Items -->
@@ -43,16 +61,10 @@
         <div class="col-lg-1 d-none d-lg-block">
           <span class="tooltray-container d-none">
             <a href="{% url 'location_update' location.pk %}"><i class="bi bi-pencil-square"></i></a>
-            <a hx-get="{% url 'location_delete' location.pk %}"
-               hx-trigger="click"
-               hx-target="#crudModal .modal-content"
-               hx-swap="innerHTML"
-               data-bs-toggle="modal"
-               data-bs-target="#crudModal"
-               href="javascript:"><i class="bi bi-trash"></i></a>
+            <a hx-get="{% url 'location_delete' location.pk %}" hx-trigger="click" hx-target="#crudModal .modal-content" hx-swap="innerHTML" data-bs-toggle="modal" data-bs-target="#crudModal" href="javascript:"><i class="bi bi-trash"></i></a>
           </span>
         </div>
       </div>
     {% endfor %}
   </div>
-{% endblock panel_content %}
+{% endblock %}
