--- a/item/templates/stock/stock_list.html
+++ b/item/templates/stock/stock_list.html
@@ -81,7 +81,7 @@
                 <div class="col-6 col-lg-3 ps-sm-0 ps-2">
                   <span class="{{ stock.expiry_date|expiry_color }}">{{ stock.expiry_date|date:'d/m/Y' }}</span>
                 </div>
-                <div class="col-6 col-lg-3 text-muted">Received:</div>
+                <div class="col-6 col-lg-3 text-muted">Delivered:</div>
                 <div class="col-6 col-lg-3 ps-sm-0 ps-2">{{ stock.delivery_date|date:"d/m/Y" }}</div>
               </div>
               <div class="row g-1">
