--- a/item/templates/validation/validation_list_stock.html
+++ b/item/templates/validation/validation_list_stock.html
@@ -13,7 +13,7 @@
     <!-- Headers -->
     <div class="row g-2 mb-2 d-none d-lg-flex text-muted fw-bold align-items-center">
       <div class="col-5">Stock Items</div>
-      <div class="col-2">Created</div>
+      <div class="col-2">Created/Delivered</div>
       <div class="col-2">Status</div>
       <div class="col-3">Comments</div>
     </div>
