--- a/templates/partials/navbar_menu_start.html
+++ b/templates/partials/navbar_menu_start.html
@@ -69,4 +69,7 @@
       </li>
     </ul>
   </li>
+  <li class="nav-item">
+    <a href="{% url 'userguide' %}" class="nav-link"><i class="bi bi-book-half text-primary"></i> User Guide</a>
+  </li>
 </ul>
